docs : 챕터4 일부 정리 및 테스트 코드 추가